fix: 분배금 재투자 기능 추가