@@ -7,6 +7,7 @@ import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 import portfolio.api.ChartResponse.Dividend;
 import portfolio.model.Amount;
@@ -51,30 +52,33 @@ public class StockReturnCalculator {
 
     public List<StockReturnData> calculateStockReturns(PortfolioRequest request,
             FetchedStockDatas fetchedStockDatas) {
-        List<StockReturnData> stockReturns = new ArrayList<>();
-        List<Double> weights = request.getWeights();
-        var indexPrices = fetchedStockDatas.getIndexPrices();
+        final boolean includeDividends = request.isIncludeDividends();
+        final List<String> tickers = request.getTickers();
+        final double initialAmount = request.getInitialAmount();
+        final List<StockReturnData> stockReturns = new ArrayList<>();
+        final List<Double> weights = request.getWeights();
+        final List<Double> indexPrices = fetchedStockDatas.getIndexPrices();
+        final Map<String, StockHistories> stockHistoriesMap = fetchedStockDatas.getStockHistories();
 
-        for (int i = 0; i < request.getTickers().size(); i++) {
-            String ticker = request.getTickers().get(i);
-            var stockHistories = fetchedStockDatas.getStockHistories().get(ticker);
+        for (int i = 0; i < tickers.size(); i++) {
+            String ticker = tickers.get(i);
+            var stockHistories = stockHistoriesMap.get(ticker);
 
             if (stockHistories != null) {
                 double weight = (weights != null && i < weights.size()) ? weights.get(i)
-                        : 1.0 / request.getTickers().size();
+                        : 1.0 / tickers.size();
                 StockReturnData stockReturn = calculateStockReturn(
-                        ticker, stockHistories, indexPrices,
-                        request.isIncludeDividends(), request.getInitialAmount(), weight);
+                        includeDividends, ticker, stockHistories, indexPrices,
+                        initialAmount, weight);
                 stockReturns.add(stockReturn);
             }
         }
         return stockReturns;
     }
 
-    public StockReturnData calculateStockReturn(String ticker, List<Double> prices, List<Long> timestamps,
+    public StockReturnData calculateStockReturn(
+            boolean includeDividends, String ticker, List<Double> prices, List<Long> timestamps,
             List<Dividend> dividends, List<Double> indexPrices, double initialAmount, double weight) {
-        boolean includeDividends = dividends != null && !dividends.isEmpty();
-
         if (prices.isEmpty()) {
             log.error("{} prices is Empty", ticker);
             return StockReturnData.builder()
@@ -88,44 +92,47 @@ public class StockReturnCalculator {
 
         // Calculate returns
         ReturnRate priceReturn = returnCalculator.calculatePriceReturn(prices);
-        ReturnRate totalReturn = includeDividends
-                ? returnCalculator.calculateTotalReturn(prices, timestamps, dividends)
-                : priceReturn;
+        ReturnRate totalReturn = returnCalculator.calculateTotalReturn(prices, timestamps, dividends);
 
         // Calculate CAGR using actual time period
         double startPrice = prices.get(0);
-        double endPrice = startPrice * (includeDividends
-                ? totalReturn.rate()
-                : priceReturn.rate()) + startPrice;
+        double endPrice = startPrice * priceReturn.rate() + startPrice;
         // prices.get(prices.size() - 1);
         log.debug("calculateStockReturn.startPrice:{} endPrice:{}", startPrice, endPrice);
 
         double years = calculateYearsBetweenPrices(timestamps);
         double cagr = years > 0 ? returnCalculator.calculateCAGR(startPrice, endPrice, years).rate() : 0.0;
-        List<ReturnRate> periodicReturnRate = returnCalculator.calculatePeriodicReturnRates(prices, timestamps,
-                dividends);
+        List<ReturnRate> periodicReturnRate = returnCalculator.calculatePeriodicReturnRates(prices, timestamps);
         double volatility = returnCalculator.calculateVolatility(periodicReturnRate);
         log.debug("calculateStockReturn.ticker:{} volatility:{}", ticker, volatility);
 
         // 누적 수익율 배당금 포함.
-        List<ReturnRate> cumulativeReturns = returnCalculator.calculateCumulativeReturns(prices, timestamps, dividends);
+        List<ReturnRate> totalReturns = returnCalculator.calculateCumulativeReturns(prices, timestamps, dividends);
         // 누적 수익율 배당금 미포함.
-        List<ReturnRate> cumulativePriceReturns = returnCalculator.calculateCumulativeReturns(prices, timestamps,
-                emptyList());
+        List<ReturnRate> priceReturns = returnCalculator.calculateCumulativeReturns(prices, timestamps, List.of());
+
+        // 배당금 재투자 가능.
+        List<ReturnRate> cumulativeReturns = includeDividends ? totalReturns : priceReturns;
 
         // 최대낙폭
         List<Double> maxDrawdowns = returnCalculator.calculateMaxDrawdowns(prices);
         // log.debug("calculateStockReturn.ticker:{} maxDrawdowns:{}", ticker,
         // maxDrawdowns);
 
-        List<Double> priceReturnsRates = cumulativePriceReturns.stream().map(ReturnRate::rate).toList();
+        List<Double> priceReturnsRates = priceReturns.stream().map(ReturnRate::rate).toList();
         List<Double> indexReturnsRates = returnCalculator
-                .calculateCumulativeReturns(indexPrices, timestamps, emptyList())
+                .calculateCumulativeReturns(indexPrices, timestamps, List.of())
                 .stream()
                 .map(ReturnRate::rate)
                 .toList();
 
         double beta = returnCalculator.calculateBeta(priceReturnsRates, indexReturnsRates);
+
+        List<Amount> calculateCumulativeAmounts = returnCalculator.calculateCumulativeAmounts(
+                includeDividends,
+                prices, timestamps,
+                dividends,
+                initialAmount, weight);
 
         return StockReturnData.builder()
                 .ticker(ticker)
@@ -134,7 +141,6 @@ public class StockReturnCalculator {
                 .cagr(cagr)
                 .volatility(volatility)
                 .cumulativeReturns(cumulativeReturns.stream().map(ReturnRate::rate).toList())
-                .cumulativePriceReturns(cumulativePriceReturns.stream().map(ReturnRate::rate).toList())
                 .prices(requireNonNullElse(prices, emptyList()))
                 .timestamps(requireNonNullElse(timestamps, emptyList()))
                 .dividends(dividends)
@@ -145,26 +151,28 @@ public class StockReturnCalculator {
                 .maxDrawdown(returnCalculator.calculateMaxValue(maxDrawdowns))
                 // Calculate amount changes if initial amount is provided
                 .amountChanges(initialAmount > 0
-                        ? returnCalculator.calculateCumulativeAmounts(
-                                prices, timestamps, dividends, initialAmount, weight)
-                                .stream().map(Amount::amount).toList()
-                        : Collections.emptyList())
+                        ? calculateCumulativeAmounts.stream().map(Amount::amount).toList()
+                        : List.of())
+                .amountDividens(initialAmount > 0
+                        ? calculateCumulativeAmounts.stream().map(Amount::cash).toList()
+                        : List.of())
                 .sharpeRatio(returnCalculator.calculateSharpeRatio(periodicReturnRate))
                 .beta(beta)
                 .build();
     }
 
-    private StockReturnData calculateStockReturn(String ticker, StockHistories stockHistories, List<Double> indexPrices,
-            boolean includeDividends,
+    private StockReturnData calculateStockReturn(
+            boolean includeDividends, String ticker, StockHistories stockHistories, List<Double> indexPrices,
             double initialAmount, double weight) {
         // Extract prices and timestamps from chart response
         List<Double> prices = stockHistories.prices();
         List<Long> timestamps = stockHistories.timestamps();
-        List<Dividend> dividends = includeDividends ? stockHistories.dividends() : Collections.emptyList();
+        List<Dividend> dividends = stockHistories.dividends();
         if (prices.size() != indexPrices.size()) {
             throw new IllegalArgumentException("Prices and index prices must have the same size");
         }
-        return calculateStockReturn(ticker, prices, timestamps, dividends, indexPrices, initialAmount, weight);
+        return calculateStockReturn(includeDividends, ticker, prices, timestamps, dividends, indexPrices, initialAmount,
+                weight);
     }
 
 }
