@@ -9,6 +9,9 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.*;
+
+import java.util.List;
+
 import portfolio.model.PortfolioRequest;
 
 class PortfolioReturnServiceTest {
@@ -65,10 +68,9 @@ class PortfolioReturnServiceTest {
         indicators.setQuote(java.util.List.of(quote));
         result.setIndicators(indicators);
         result.setTimestamp(java.util.List.of(
-            req.getStartDate().toEpochDay() * 24 * 60 * 60,
-            req.getStartDate().plusMonths(1).toEpochDay() * 24 * 60 * 60,
-            req.getEndDate().toEpochDay() * 24 * 60 * 60
-        ));
+                req.getStartDate().toEpochDay() * 24 * 60 * 60,
+                req.getStartDate().plusMonths(1).toEpochDay() * 24 * 60 * 60,
+                req.getEndDate().toEpochDay() * 24 * 60 * 60));
         chart.setResult(java.util.List.of(result));
         chartResponse.setChart(chart);
 
@@ -89,84 +91,80 @@ class PortfolioReturnServiceTest {
         map.put("AAPL", chartResponse);
         map.put("^GSPC", indexChartResponse);
 
-        when(portfolioDataService.fetchMultipleStocks(anyList(), anyLong(), anyLong()))
-            .thenReturn(java.util.concurrent.CompletableFuture.completedFuture(map));
+        when(portfolioDataService.fetchMultipleDividends(anyList(), anyLong(), anyLong()))
+                .thenReturn(java.util.concurrent.CompletableFuture.completedFuture(map));
 
         // 최소한 정상 StockReturnData 반환
         var stockReturnData = portfolio.model.StockReturnData.builder()
-            .ticker("AAPL")
-            .prices(java.util.List.of(100.0, 110.0, 120.0))
-            .timestamps(java.util.List.of(
-                req.getStartDate().toEpochDay() * 24 * 60 * 60,
-                req.getStartDate().plusMonths(1).toEpochDay() * 24 * 60 * 60,
-                req.getEndDate().toEpochDay() * 24 * 60 * 60
-            ))
-            .dividends(java.util.Collections.emptyList())
-            .build();
+                .ticker("AAPL")
+                .prices(java.util.List.of(100.0, 110.0, 120.0))
+                .timestamps(java.util.List.of(
+                        req.getStartDate().toEpochDay() * 24 * 60 * 60,
+                        req.getStartDate().plusMonths(1).toEpochDay() * 24 * 60 * 60,
+                        req.getEndDate().toEpochDay() * 24 * 60 * 60))
+                .dividends(java.util.Collections.emptyList())
+                .build();
 
         when(stockReturnCalculator.calculateStockReturns(any(), any()))
-            .thenReturn(java.util.List.of(stockReturnData));
+                .thenReturn(java.util.List.of(stockReturnData));
 
         assertDoesNotThrow(() -> service.analyzePortfolio(req));
     }
 
-        // --- calculatePortfolioStockReturn 단위 테스트 ---
+    // --- calculatePortfolioStockReturn 단위 테스트 ---
 
     @Test
     void stockReturns가_empty면_예외() {
-        assertThrows(UnsupportedOperationException.class, () ->
-            service.calculatePortfolioStockReturn(java.util.Collections.emptyList(), java.util.List.of(1.0), java.util.List.of(100.0, 110.0, 120.0))
-        );
+        assertThrows(UnsupportedOperationException.class, () -> service.calculatePortfolioStockReturn(true, List.of(),
+                List.of(1.0), List.of(100.0, 110.0, 120.0)));
     }
 
     @Test
     void weights가_null이면_예외() {
         var stockReturn = minimalStockReturnData();
-        assertThrows(IllegalArgumentException.class, () ->
-            service.calculatePortfolioStockReturn(java.util.List.of(stockReturn), null, java.util.List.of(100.0, 110.0, 120.0))
-        );
+        assertThrows(IllegalArgumentException.class, () -> service.calculatePortfolioStockReturn(true,
+                List.of(stockReturn), null, List.of(100.0, 110.0, 120.0)));
     }
 
     @Test
     void stockReturns와_weights_길이_불일치시_예외() {
         var stockReturn = minimalStockReturnData();
-        assertThrows(IllegalArgumentException.class, () ->
-            service.calculatePortfolioStockReturn(java.util.List.of(stockReturn), java.util.List.of(0.5, 0.5), java.util.List.of(100.0, 110.0, 120.0))
-        );
+        assertThrows(IllegalArgumentException.class, () -> service.calculatePortfolioStockReturn(true,
+                List.of(stockReturn), List.of(0.5, 0.5), List.of(100.0, 110.0, 120.0)));
     }
 
     @Test
     void 정상_입력시_포트폴리오_StockReturnData_반환() {
         var stock1 = portfolio.model.StockReturnData.builder()
-            .ticker("AAA")
-            .prices(java.util.List.of(100.0, 110.0, 120.0))
-            .timestamps(java.util.List.of(1L, 2L, 3L))
-            .dividends(java.util.Collections.emptyList())
-            .initialAmount(1000.0)
-            .build();
+                .ticker("AAA")
+                .prices(java.util.List.of(100.0, 110.0, 120.0))
+                .timestamps(java.util.List.of(1L, 2L, 3L))
+                .dividends(List.of())
+                .initialAmount(1000.0)
+                .build();
         var stock2 = portfolio.model.StockReturnData.builder()
-            .ticker("BBB")
-            .prices(java.util.List.of(200.0, 210.0, 220.0))
-            .timestamps(java.util.List.of(1L, 2L, 3L))
-            .dividends(java.util.Collections.emptyList())
-            .initialAmount(2000.0)
-            .build();
+                .ticker("BBB")
+                .prices(java.util.List.of(200.0, 210.0, 220.0))
+                .timestamps(java.util.List.of(1L, 2L, 3L))
+                .dividends(List.of())
+                .initialAmount(2000.0)
+                .build();
 
         var weights = java.util.List.of(0.5, 0.5);
         var indexPrices = java.util.List.of(1000.0, 1100.0, 1200.0);
 
         // 정상 반환값 stub 추가
-        when(stockReturnCalculator.calculateStockReturn(
-            anyString(), anyList(), anyList(), anyList(), anyList(), anyDouble(), anyDouble())
-        ).thenReturn(portfolio.model.StockReturnData.builder()
-            .ticker("Portfolio")
-            .prices(java.util.List.of(1.0, 2.0, 3.0))
-            .timestamps(java.util.List.of(1L, 2L, 3L))
-            .dividends(java.util.Collections.emptyList())
-            .initialAmount(3000.0)
-            .build());
+        when(stockReturnCalculator.calculateStockReturn(anyBoolean(),
+                anyString(), anyList(), anyList(), anyList(), anyList(), anyDouble(), anyDouble()))
+                .thenReturn(portfolio.model.StockReturnData.builder()
+                        .ticker("Portfolio")
+                        .prices(java.util.List.of(1.0, 2.0, 3.0))
+                        .timestamps(java.util.List.of(1L, 2L, 3L))
+                        .dividends(List.of())
+                        .initialAmount(3000.0)
+                        .build());
 
-        var result = service.calculatePortfolioStockReturn(java.util.List.of(stock1, stock2), weights, indexPrices);
+        var result = service.calculatePortfolioStockReturn(true, List.of(stock1, stock2), weights, indexPrices);
 
         assertNotNull(result);
         assertEquals(3, result.getPrices().size());
@@ -175,11 +173,11 @@ class PortfolioReturnServiceTest {
     // 최소 StockReturnData 생성 유틸
     private portfolio.model.StockReturnData minimalStockReturnData() {
         return portfolio.model.StockReturnData.builder()
-            .ticker("AAA")
-            .prices(java.util.List.of(100.0, 110.0, 120.0))
-            .timestamps(java.util.List.of(1L, 2L, 3L))
-            .dividends(java.util.Collections.emptyList())
-            .initialAmount(1000.0)
-            .build();
+                .ticker("AAA")
+                .prices(java.util.List.of(100.0, 110.0, 120.0))
+                .timestamps(java.util.List.of(1L, 2L, 3L))
+                .dividends(List.of())
+                .initialAmount(1000.0)
+                .build();
     }
 }
